--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,17 @@ lib
 lib64
 pyvenv.cfg
 share
+
+
+*.pyc
+__pycache__/
+
+instance/
+
+.pytest_cache/
+.coverage
+htmlcov/
+
+dist/
+build/
+*.egg-info/
