--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   middle:
     build: .  
     image: annotator-middle:1.0.0
+    command: >
+      sh -c "flask db upgrade && flask run --host=0.0.0.0"
     ports:
       - "3000:5000"
     environment:
