--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     command: >
       sh -c "flask db upgrade && flask run --host=0.0.0.0"
     ports:
-      - "3000:5000"
+      - "5000"
     environment:
       SECRECT_KEY: "topSecret"
       DATABASE_URI: postgresql://user:theBigSecret@db/annotations
@@ -28,6 +28,28 @@ services:
       retries: 5
     volumes:
       - annotator_db:/var/lib/postgresql/data
+
+  ui:
+    build: 
+      context: ./annotation-ui/
+      dockerfile: Dockerfile.dev
+    image: annotator-ui-dev:0.0.1
+    user: $UID:$GID
+    command: ng serve --host 0.0.0.0
+    ports:
+      - "4200"
+    volumes: 
+      - ./annotation-ui/:/app/
+
+  nginx:
+    image: nginx:alpine
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - "80:80"
+    depends_on:
+      - middle
+      - ui
     
 volumes:
   annotator_db:
